skills section, z-index fixing

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,7 +13,7 @@ body {
 .white-bg-block {
   overflow: hidden;
   background-color: rgb(255, 255, 255);
-  z-index: 1;
+  z-index: 3;
   position: fixed;
   width: 100vw;
   height: 100vh;
@@ -44,7 +44,7 @@ p {
   overflow-y: hidden;
 }
 .menu-button {
-  z-index: 3;
+  z-index: 6;
   position: fixed;
   top: 1rem;
   right: 1rem;
@@ -99,7 +99,7 @@ p {
   height: 0;
   border-radius: 50% 0 50% 50%;
   background-color: $react-blue-dark;
-  z-index: 1;
+  z-index: 5;
   transition: all 1s ease-in;
   ul {
     list-style: none;
@@ -120,15 +120,18 @@ p {
   }
 }
 .menu-item1 {
-  animation: slideListItem 2s;
+  animation: slideListItem 1.7s;
 }
 .menu-item2 {
-  animation: slideListItem 2.3s;
+  animation: slideListItem 2s;
 }
 .menu-item3 {
-  animation: slideListItem 2.6s;
+  animation: slideListItem 2.3s;
 }
 .menu-item4 {
+  animation: slideListItem 2.6s;
+}
+.menu-item5 {
   animation: slideListItem 2.9s;
 }
 .hide-menu-item {
@@ -136,7 +139,7 @@ p {
 }
 .show-menu {
   width: calc(250px + 10vw);
-  height: 300px;
+  height: 350px;
   border-radius: 0 0 0 10%;
 }
 .lang-wrap {
@@ -296,15 +299,11 @@ p {
     padding-bottom: 2rem;
   }
 }
-#ending {
-  background-color: $bg-light;
-}
 #projects {
   width: 100vw;
-  border-radius: 0 0 10% 10%;
-  background-color: green;
+  border-radius: 0 0 75px 75px;
   position: relative;
-  z-index: 2;
+  padding-bottom: 2rem;
   h1 {
     font-size: $font-h1;
     text-align: center;
@@ -347,7 +346,7 @@ p {
   left: 50%;
   position: fixed;
   transform: translateY(-50%) translateX(-50%);
-  z-index: 2;
+  z-index: 4;
   cursor: default;
   overflow-y: auto;
   img {
@@ -383,13 +382,6 @@ p {
   .nav:hover {
     background-color: rgb(255, 255, 255);
   }
-}
-#contact {
-  background-color: red;
-  height: 100px;
-  bottom: 10px;
-  position: relative;
-  z-index: 1;
 }
 .slide-from-below * {
   animation: slideInFromBelow 0.6s linear;
